added screenshot animations like a boss

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -3,8 +3,14 @@ title: Spectacle
 ---
 
 .container
-  header
-    img src="/images/macbook.png" class="macbook"
+  .macbook
+    .monitor
+      .right.screen
+      .left.screen
+      .bottom.screen
+      .top.screen
+      .center.screen
+      .whole.screen
 
   h1 Move and resive windows <span>with ease.</span>
   h2 Window control with simple, customizable keyboard shortcuts.
