changed feature icons

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -24,7 +24,7 @@ title: Spectacle
       p We start you with some shortcuts, but Spectcle allows you to fully customize what keys do what. You’re in control of the workflow.
 
     .feature
-      .mobile
+      .maintained
       h3 Maintained
       p If you encounter a problem using Spectacle, or would like to request an enhancement, please log into <a href="#">GitHub</a> and create an <a href="#">issue</a>.
 
@@ -34,7 +34,7 @@ title: Spectacle
       p Spectacle has been, and will continue to be, an open source project. The source code can be found on <a href="#">GitHub</a>.
 
     .feature
-      .money
+      .free
       h3 Free
       p Although Spectacle is 100% free to use, if you find this utility useful, feel free to <a href="#">donate</a>. Any amount of donation is apprieciated!
 
