--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -196,7 +196,7 @@ p
   padding: 0 2%
 
 
-.heart, .mobile, .lock, .money
+.heart, .maintained, .lock, .free
   margin: auto
   height: 32px
   margin-bottom: 20px
@@ -206,21 +206,20 @@ p
   width: 40px
   background-size: 100%
 
-
-.mobile
-  background: url(/images/mobile.png)
-  width: 20px
-  background-size: 96%
-
-.lock
-  background: url(/images/lock.png)
-  width: 27px
+.maintained
+  background: url(/images/maintained.png)
+  width: 32px
   background-size: 97%
 
-.money
-  background: url(/images/money.png)
-  width: 44px
-  background-size: 98%
+.lock
+  background: url(/images/unlock.png)
+  width: 32px
+  background-size: 97%
+
+.free
+  background: url(/images/free.png)
+  width: 32px
+  background-size: 97%
 
 footer
   width: 100%
