added monitor glare

--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -34,6 +34,16 @@ img
   top: 23px
   left: 91px
 
+.glare
+  background: url(/images/glare.png)
+  background-size: 100%
+  width: 227px
+  height: 321px
+  position: absolute
+  right: 75px
+  top: 3px
+  z-index: 1
+
 .screen
   position: absolute
   width: 496px
