changed feature icons again

--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -210,6 +210,7 @@ p
   margin: auto
   height: 32px
   margin-bottom: 20px
+  background: no-repeat
 
 .heart
   background: url(/images/heart.png)
