fixed retina icon repeat issue

--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -213,22 +213,22 @@ p
   background-repeat: no-repeat
 
 .heart
-  background: url(/images/heart.png)
+  background-image: url(/images/heart.png)
   width: 40px
   background-size: 100%
 
 .maintained
-  background: url(/images/maintained.png)
+  background-image: url(/images/maintained.png)
   width: 32px
   background-size: 97%
 
 .lock
-  background: url(/images/unlock.png)
+  background-image: url(/images/unlock.png)
   width: 32px
   background-size: 97%
 
 .free
-  background: url(/images/free.png)
+  background-image: url(/images/free.png)
   width: 32px
   background-size: 97%
 
