changes button and link colors

--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -156,7 +156,7 @@ h1
   margin-bottom: 14px
 
   span
-    color: #ff6e5f
+    color: #144b8b
     font-weight: bold
 
 h2
@@ -183,19 +183,12 @@ p
   border-radius: 5px
   text-align: center
   margin:  0 auto 60px
-  padding-top: 17px
+  padding-top: 15px
   font-size: 2.2em
   font-weight: bold
-  text-shadow: 0 -2px 0 #c42424
-  box-shadow: 0 2px 4px #a9241e, 0 6px 6px rgba(#9d3d39, .3), 0 10px 14px rgba(#b74c48, .3)
-  background: #ffaf98
-  background: -moz-linear-gradient(top, #ffaf98 0%, #ff5251 100%)
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffaf98), color-stop(100%,#ff5251))
-  background: -webkit-linear-gradient(top, #ffaf98 0%,#ff5251 100%)
-  background: -o-linear-gradient(top, #ffaf98 0%,#ff5251 100%)
-  background: -ms-linear-gradient(top, #ffaf98 0%,#ff5251 100%)
-  background: linear-gradient(to bottom, #ffaf98 0%,#ff5251 100%)
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffaf98', endColorstr='#ff5251',GradientType=0 )
+  text-shadow: 0 -1px 2px #081f38
+  box-shadow: 0 2px 4px #081f38, 0 6px 6px rgba(#144b8b, .3), 0 10px 14px rgba(#144b8b, .3)
+  +linear-gradient (#1f75aa, #144b8b)
 
 .info
   +clearfix
