--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -156,7 +156,7 @@ h1
   margin-bottom: 14px
 
   span
-    color: #144b8b
+    color: #1f75aa
     font-weight: bold
 
 h2
@@ -187,7 +187,7 @@ p
   font-size: 2.2em
   font-weight: bold
   text-shadow: 0 -1px 2px #081f38
-  box-shadow: 0 2px 4px #081f38, 0 6px 6px rgba(#144b8b, .3), 0 10px 14px rgba(#144b8b, .3)
+  box-shadow: 0 2px 4px #081f38, 0 6px 6px rgba(#081f38, .3), 0 10px 14px rgba(#081f38, .2)
   +linear-gradient (#1f75aa, #144b8b)
 
 .info
