added button active state

--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -190,6 +190,10 @@ p
   box-shadow: 0 2px 4px #081f38, 0 6px 6px rgba(#081f38, .3), 0 10px 14px rgba(#081f38, .2)
   +linear-gradient (#1f75aa, #144b8b)
 
+  &:active
+    +linear-gradient (#144b8b, #1f75aa)
+    box-shadow: none
+
 .info
   +clearfix
 
