Added proper links

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -16,7 +16,7 @@ title: Spectacle
   h1 Move and resive windows <span>with ease.</span>
   h2 Window control with simple, customizable keyboard shortcuts.
 
-  a.button href="#" Download Spectacle
+  a.button href="https://s3.amazonaws.com/spectacle/downloads/Spectacle+0.8.2.zip" Download Spectacle
 
   section.info
     .feature
@@ -27,12 +27,12 @@ title: Spectacle
     .feature
       .maintained
       h3 Maintained
-      p If you encounter a problem using Spectacle, or would like to request an enhancement, please log into <a href="#">GitHub</a> and create an <a href="#">issue</a>.
+      p If you encounter a problem using Spectacle, or would like to request an enhancement, please log into <a href="https://github.com/login">GitHub</a> and create an <a href="https://github.com/eczarny/spectacle/issues">issue</a>.
 
     .feature
       .lock
       h3 Open Source
-      p Spectacle has been, and will continue to be, an open source project. The source code can be found on <a href="#">GitHub</a>.
+      p Spectacle has been, and will continue to be, an open source project. The source code can be found on <a href="https://github.com/eczarny/spectacle">GitHub</a>.
 
     .feature
       .free
