--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -1,6 +1,7 @@
 @charset "utf-8"
 @import clear
 @import bourbon/bourbon
+$tablet: 748px
 
 
 body
@@ -17,7 +18,7 @@ img
   max-width: 100%
 
 .container
-  width: 100%
+  width: 96%
   max-width: 960px
   margin: auto
 
@@ -28,6 +29,12 @@ img
   height: 398px
   margin: 40px auto 20px
   position: relative
+
+  @media (max-width: $tablet)
+    +transform (scale(.75))
+
+
+
 
 .monitor
   position: absolute
