added media queries

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -13,7 +13,7 @@ title: Spectacle
       .center.screen
       .whole.screen
 
-  h1 Move and resive windows <span>with ease.</span>
+  h1 Move and resize windows <span>with ease.</span>
   h2 Window control with simple, customizable keyboard shortcuts.
 
   a.button href="https://s3.amazonaws.com/spectacle/downloads/Spectacle+0.8.2.zip" Download Spectacle
